force-app/main/default/objects/WorkOrder/fields/Assigned_Technician_to_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Technician_to_Work_Order__c</fullName>
    <description>Field on the Work Order object to store the assigned technician</description>
    <label>Assigned Technician to Work Order</label>
    <length>10</length>
    <type>Text</type>
</CustomField>