force-app/main/default/objects/WorkOrder/fields/Work_Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Name__c</fullName>
    <label>Work Order Name</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>