force-app/main/default/objects/WorkOrder/validationRules/InService_Zip_Codes.validationRule-meta.xml
<ValidationRule>
    <fullName>InService_Zip_Codes</fullName>
    <active>true</active>
    <description>Allow only in-service zip codes to be entered.</description>
    <errorConditionFormula>VLOOKUP( $ObjectType.In_Service_Zip_Code__c.Fields.Name , $ObjectType.In_Service_Zip_Code__c.Fields.Name, LEFT(PostalCode,5)) &lt;&gt; LEFT(PostalCode,5)</errorConditionFormula>
    <errorDisplayField>PostalCode</errorDisplayField>
    <errorMessage>The zip code needs to be in service.</errorMessage>
</ValidationRule>