force-app/main/default/objects/WorkOrder/listViews/Work_Order_to_Technician_WorkOrder.listView-meta.xml
<ListView>
    <fullName>Work_Order_to_Technician_WorkOrder</fullName>
    <filterScope>Queue</filterScope>
    <label>Work Order to Technician</label>
    <queue>Work_Order_to_Technician</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>